Adding AutoComplete.c and it's heades. Plus some changes on ReadDic and MainForm files.

--- a/DsProject.vcxproj
+++ b/DsProject.vcxproj
@@ -122,11 +122,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AutoComplete.cpp" />
     <ClCompile Include="MainForm.cpp" />
     <ClCompile Include="ReadDic.cpp" />
     <ClCompile Include="Trie.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\AutoComplete.h" />
     <ClInclude Include="MainForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
