--- a/DsProject.vcxproj
+++ b/DsProject.vcxproj
@@ -128,7 +128,7 @@
     <ClCompile Include="Trie.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\AutoComplete.h" />
+    <ClInclude Include="AutoComplete.h" />
     <ClInclude Include="MainForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
